name:                webserver
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/josephowatkins/webserver#readme
license:             BSD3
license-file:        LICENSE
author:              Joseph Watkins
maintainer:          joseph.o.watkins@gmail.com
copyright:           2019 Joseph Watkins
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable webserver
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
